objects/APTS_SAP_Response__c.object
<CustomObject>
    <description>Mulesoft will write directly into this object</description>
    <fields>
        <fullName>Index__c</fullName>
        <description>this is needed if the response payload was split into multiple chunks to be able to re-join the string into one proper response object and parse it</description>
        <label>Index</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>the (potentially partial) response to the initial request.</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Request__c</fullName>
        <label>SAP Request</label>
        <referenceTo>APTS_SAP_Request__c</referenceTo>
        <relationshipLabel>SAP Responses</relationshipLabel>
        <relationshipName>SAP_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SAP Response</label>
    <nameField>
        <displayFormat>SAPR-{0000}</displayFormat>
        <label>SAP Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>